--- a/lib/server/hlsjs.html
+++ b/lib/server/hlsjs.html
@@ -21,7 +21,7 @@
     var video = document.getElementById("video");
 
     // 외부 서버의 m3u8 파일 경로 지정
-    var videoSrc = "http://172.30.1.27:9002/output.m3u8";
+    var videoSrc = "http://172.30.1.27:9002/pi5/output.m3u8";
     if (Hls.isSupported()) {
       var hls = new Hls();
       hls.loadSource(videoSrc);
